Fix up spacing and margins of images and videos

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -82,6 +82,10 @@ ion-footer {
   height: 5rem !important;
 }
 
+ion-row.row {
+  width: 100% !important;
+}
+
 .ion-page {
   // background-image: url('/assets/images/drawing.svg');
   background-repeat: repeat;
