--- a/src/pages/example-word/example-word.scss
+++ b/src/pages/example-word/example-word.scss
@@ -48,7 +48,7 @@ page-example-word {
   .media-frame-image {
     width: 100%;
     height: auto;
-    margin: 0.5rem;
+    margin: 1rem;
   }
 
   .media-frame-image {
