--- a/src/pages/vowel-trainer/vowel-trainer.scss
+++ b/src/pages/vowel-trainer/vowel-trainer.scss
@@ -121,9 +121,29 @@ page-vowel-trainer {
 
   .media-frame-keyword,
   .media-frame-vocal-tract-animation {
+    width: 100%;
+    // display: block;
+    // &:after {
+    //   content: "";
+    //   display: block;
+    //   padding-bottom: 100%;
+    // }
+    height: auto;
     margin: 1rem;
     background-color: color($md-palette, md-black);
   }
+
+  .media-frame-keyword {
+    img {
+      width: 100%;
+      &:after {
+        content: "";
+        display: block;
+        padding-bottom: 100%;
+      }
+    }
+  }
+
   .media-frame-example {
     background-color: color($md-palette, md-black);
   }
